# TDFA

./: .gitignore  CMakeLists.txt  README.md  RunResults.txt  exampleuci.txt  exampleuci2.txt  perftsuite.epd  test.txt  todo.txt
src/: BitBoard.cpp  BitBoard.hpp  Board.cpp  Board.hpp  BoardUtils.hpp  Debug.cpp  Debug.hpp  Evaluate.hpp  MagicBitboards.cpp  MagicBitboards.hpp  MagicConstants.hpp  Move.hpp  MoveGen.cpp  MoveGen.hpp  MoveList.hpp  Pext.cpp  Pext.hpp  Position.cpp  Position.hpp  Search.cpp  Search.hpp  Testing.hpp  Timer.hpp  Titboard.hpp  TranspositionTable.cpp  TranspositionTable.hpp  Types.hpp  Uci.cpp  Uci.hpp  Util.hpp  ZobristConstants.hpp  main.cpp
src/Core/: BitBoard.cpp  BitBoard.hpp  Debug.cpp  Debug.hpp  Evaluate.hpp  MagicConstants.hpp  Move.hpp  Search.cpp  Search.hpp  Testing.hpp  Timer.hpp  Types.hpp  Uci.cpp  Uci.hpp  ZobristConstants.hpp  a.cxx
src/Core/headers/: BitBoard.hpp  MagicConstants.hpp  Types.hpp
src/MoveGen/: MoveGen.cpp  MoveGen.hpp  MoveList.hpp
